@startuml
'https://plantuml.com/class-diagram
skinparam groupInheritance 2

abstract class Field
class Prison
class Start
class Chance{
    -chanceCard:ChanceCard[]
    +drawCard():ChanceCard
}
class GoToPrison
class Parking
class Plot{
    -color:String
    -price:int
    -rent:int
}

Field <|-- Prison
Field <|-- Start
Field <|-- Chance
Field <|-- GoToPrison
Field <|-- Parking
Field <|-- Plot

class UIController{
    -gui:Gui
}
class Player{
    -die1:Die
    -account:Account
    -position:int
    +rollDice():void
    +getDiceSum():int
}
class ChanceCard{

}

class Account{
    -money:int
}
class Die{
    -faceValue:int
    -amountOfFaces:int
    +rollDie():void
}
class FieldController {
    -fields:Field[]
}
class GameController

Player -->"1" Die
Player -->"1" Account
GameController -->"2..4" Player
GameController -->"1" FieldController
FieldController -->"24" Field
GameController -->"1" UIController
UIController -->"1" Languages
Chance -->"20" ChanceCard

class Languages{
    {static}-currentLocale:Locale
    {static}-messages:ResourceBundle
    {static}+setLanguages(languages:String,country:String):void
    +getMessage(key:String):String
}

@enduml